add folders and changes in structure

--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link href="styles/style.css"
+          rel="stylesheet" type="text/css">
 </head>
 <body>
+    <!--CABECERA-->
+    <div class="header-container">
+        <h1 class>MUSEO</h1>
+        <!--MENU-->
+        <div class="header-menu">
+            <nav>
+                <a href="">HTML</a> |
+                <a href="">CSS</a> |
+                <a href="">JavaScript</a>
+            </nav>
+        </div>
+    </div>
+
+    <div class="cuerpo-container">
+        <!--ENLACES DE INTERES-->
+        <div class="elements-container">
+            <h1 class>MUSEO</h1>
+
+        </div>
+
+        <!--OBRAS-->
+        <div class="pictures-container">
+            <h1 class>MUSEO</h1>
+
+        </div>
+    </div>
+
+
+    <!--PIE DE PAGINA-->
+    <div class="footer-container">
+        <p>Copyright &copy; 2018 Ángel Robledillo Perea, Jorge Juan Ñíguez Fernandez
+    </div>
 
 </body>
 </html>
