Changes in structure

--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Museo del Fútbol</title>
+    <link rel = "shortcut icon" href="img/favicon.ico">
 
     <link href="styles/style.css"
           rel="stylesheet" type="text/css">
 </head>
 <body>
-    <!--CABECERA-->
-    <div class="header-container">
-        <h1 class>MUSEO</h1>
+
+<!--CABECERA-->
+<div class="header-container">
+    <div class="header-icon">
+        <img class="logo" src="img/RFEF_logo.png" >
+    </div>
+    <div class="header-title">
+
+        <h1 class>MUSEO DEL FÚTBOL ESPAÑOL</h1>
         <!--MENU-->
         <div class="header-menu">
             <nav>
@@ -21,25 +28,218 @@
         </div>
     </div>
 
-    <div class="cuerpo-container">
-        <!--ENLACES DE INTERES-->
-        <div class="elements-container">
-            <h1 class>MUSEO</h1>
+</div>
 
-        </div>
+<div class="cuerpo-container">
+    <!--ENLACES DE INTERES-->
+    <div class="elements-container">
+        <h1 class>MUSEO</h1>
 
-        <!--OBRAS-->
-        <div class="pictures-container">
-            <h1 class>MUSEO</h1>
-
-        </div>
     </div>
 
+    <!--OBRAS-->
+    <div class="pictures-container">
 
-    <!--PIE DE PAGINA-->
-    <div class="footer-container">
-        <p>Copyright &copy; 2018 Ángel Robledillo Perea, Jorge Juan Ñíguez Fernandez
+        <!-- Fila 1 -->
+        <div class="fila">
+            <div class="elemento1">
+                <a href="alaves.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/Alaves.png">
+                        <p>Deportivo Alaves</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento2">
+                <a href="athletic.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/Athletic.png">
+                        <p>Athletic Bilbao</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento3">
+                <a href="atletico.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/atleticomadrid.png">
+                        <p>Atletico de Madrid</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Fila 2 -->
+        <div class="fila">
+            <div class="elemento1">
+                <a href="barcelona.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/barcelona.png">
+                        <p>FC Barcelona</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento2">
+                <a href="betis.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/betis.png">
+                        <p>Real Betis</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento3">
+                <a href="celta.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/celta.png">
+                        <p>Celta de Vigo</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Fila 3 -->
+
+        <div class="fila">
+            <div class="elemento1">
+                <a href="deportivo.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/depor.png">
+                        <p>Deportivo de La Coruña</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento2">
+                <a href="eibar.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/eibar.png">
+                        <p>Eibar</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento3">
+                <a href="espanyol.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/espanyol.png">
+                        <p>Espanyol</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Fila 4 -->
+
+        <div class="fila">
+            <div class="elemento1">
+                <a href="getafe.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/getafe.png">
+                        <p>Getafe</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento2">
+                <a href="girona.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/girona.png">
+                        <p>Girona</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento3">
+                <a href="laspalmas.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/lasPalmas.png">
+                        <p>Las Palmas</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Fila 5 -->
+
+        <div class="fila">
+            <div class="elemento1">
+                <a href="leganes.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/leganes.png">
+                        <p>Leganes</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento2">
+                <a href="levante.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/levante.png">
+                        <p>Levante</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento3">
+                <a href="malaga.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/malaga.png">
+                        <p>Málaga</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Fila 6 -->
+
+        <div class="fila">
+            <div class="elemento1">
+                <a href="realmadrid.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/realmadrid.png">
+                        <p>Real Madrid</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento2">
+                <a href="realsociedad.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/realsociedad.png">
+                        <p>Real Sociedad</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento3">
+                <a href="sevilla.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/sevilla.png">
+                        <p>Sevilla</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- Fila 7 -->
+
+        <div class="fila">
+            <div class="elemento1">
+                <a href="valencia.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/valencia.png">
+                        <p>Deportivo de La Coruña</p>
+                    </div>
+                </a>
+            </div>
+            <div class="elemento2">
+                <a href="villarreal.html">
+                    <div class="imagen-elemento">
+                        <img class="escudo-elemento" src="img/villarreal.png">
+                        <p>Villarreal</p>
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
+</div>
+
+
+<!--PIE DE PAGINA-->
+<div class="footer-container">
+    <p>Copyright &copy; 2018 Ángel Robledillo Perea & Jorge Juan Ñíguez Fernandez
+</div>
 
 </body>
 </html>
