Optimize size of structure

--- a/index.html
+++ b/index.html
@@ -10,236 +10,274 @@
 </head>
 <body>
 
-<!--CABECERA-->
-<div class="header-container">
-    <div class="header-icon">
-        <img class="logo" src="img/RFEF_logo.png" >
-    </div>
-    <div class="header-title">
-
-        <h1 class>MUSEO DEL FÚTBOL ESPAÑOL</h1>
-        <!--MENU-->
-        <div class="header-menu">
-            <nav>
-                <a href="">HTML</a> |
-                <a href="">CSS</a> |
-                <a href="">JavaScript</a>
-            </nav>
+    <!--CABECERA-->
+    <div class="header-container">
+        <div class="header-icon">
+            <img class="logo" src="img/RFEF_logo.png">
         </div>
-    </div>
+        <div class="header-title">
 
-</div>
-
-<div class="cuerpo-container">
-    <!--ENLACES DE INTERES-->
-    <div class="elements-container">
-        <h1 class>MUSEO</h1>
+            <h1 class>MUSEO DEL FÚTBOL ESPAÑOL</h1>
+            <!--MENU-->
+            <div class="header-menu">
+                <nav>
+                    <a href="">HTML</a> |
+                    <a href="">CSS</a> |
+                    <a href="">JavaScript</a>
+                </nav>
+            </div>
+        </div>
 
     </div>
 
-    <!--OBRAS-->
-    <div class="pictures-container">
-
-        <!-- Fila 1 -->
-        <div class="fila">
-            <div class="elemento1">
-                <a href="alaves.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/Alaves.png">
-                        <p>Deportivo Alaves</p>
-                    </div>
-                </a>
-            </div>
-            <div class="elemento2">
-                <a href="athletic.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/Athletic.png">
-                        <p>Athletic Bilbao</p>
-                    </div>
-                </a>
-            </div>
-            <div class="elemento3">
-                <a href="atletico.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/atleticomadrid.png">
-                        <p>Atletico de Madrid</p>
-                    </div>
-                </a>
-            </div>
+    <div class="cuerpo-container">
+        <!--ENLACES DE INTERES-->
+        <div class="elements-container">
+            <h1 class>MUSEO</h1>
         </div>
 
-        <!-- Fila 2 -->
-        <div class="fila">
-            <div class="elemento1">
-                <a href="barcelona.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/barcelona.png">
-                        <p>FC Barcelona</p>
-                    </div>
-                </a>
-            </div>
-            <div class="elemento2">
-                <a href="betis.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/betis.png">
-                        <p>Real Betis</p>
-                    </div>
-                </a>
-            </div>
-            <div class="elemento3">
-                <a href="celta.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/celta.png">
-                        <p>Celta de Vigo</p>
-                    </div>
-                </a>
-            </div>
-        </div>
+        <!--OBRAS-->
+        <div class="pictures-container">
 
-        <!-- Fila 3 -->
+            <!-- Fila 1 -->
+            <div class="fila">
+                <div class="elemento">
+                    <a href="alaves.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/Alaves.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Deportivo Alaves</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="athletic.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/Athletic.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Athletic Bilbao</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="atletico.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/atleticomadrid.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Atletico de Madrid</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
 
-        <div class="fila">
-            <div class="elemento1">
-                <a href="deportivo.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/depor.png">
-                        <p>Deportivo de La Coruña</p>
-                    </div>
-                </a>
+            <!-- Fila 2 -->
+            <div class="fila">
+                <div class="elemento">
+                    <a href="barcelona.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/barcelona.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>FC Barcelona</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="betis.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/betis.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Real Betis</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="celta.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/celta.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Celta de Vigo</p>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="elemento2">
-                <a href="eibar.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/eibar.png">
-                        <p>Eibar</p>
-                    </div>
-                </a>
-            </div>
-            <div class="elemento3">
-                <a href="espanyol.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/espanyol.png">
-                        <p>Espanyol</p>
-                    </div>
-                </a>
-            </div>
-        </div>
 
-        <!-- Fila 4 -->
+            <!-- Fila 3 -->
 
-        <div class="fila">
-            <div class="elemento1">
-                <a href="getafe.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/getafe.png">
-                        <p>Getafe</p>
-                    </div>
-                </a>
+            <div class="fila">
+                <div class="elemento">
+                    <a href="deportivo.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/depor.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Deportivo de La Coruña</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="eibar.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/eibar.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Eibar</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="espanyol.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/espanyol.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Espanyol</p>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="elemento2">
-                <a href="girona.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/girona.png">
-                        <p>Girona</p>
-                    </div>
-                </a>
-            </div>
-            <div class="elemento3">
-                <a href="laspalmas.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/lasPalmas.png">
-                        <p>Las Palmas</p>
-                    </div>
-                </a>
-            </div>
-        </div>
 
-        <!-- Fila 5 -->
+            <!-- Fila 4 -->
 
-        <div class="fila">
-            <div class="elemento1">
-                <a href="leganes.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/leganes.png">
-                        <p>Leganes</p>
-                    </div>
-                </a>
+            <div class="fila">
+                <div class="elemento">
+                    <a href="getafe.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/getafe.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Getafe</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="girona.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/girona.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Girona</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="laspalmas.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/lasPalmas.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Las Palmas</p>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="elemento2">
-                <a href="levante.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/levante.png">
-                        <p>Levante</p>
-                    </div>
-                </a>
-            </div>
-            <div class="elemento3">
-                <a href="malaga.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/malaga.png">
-                        <p>Málaga</p>
-                    </div>
-                </a>
-            </div>
-        </div>
 
-        <!-- Fila 6 -->
+            <!-- Fila 5 -->
 
-        <div class="fila">
-            <div class="elemento1">
-                <a href="realmadrid.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/realmadrid.png">
-                        <p>Real Madrid</p>
-                    </div>
-                </a>
+            <div class="fila">
+                <div class="elemento">
+                    <a href="leganes.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/leganes.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Leganes</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="levante.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/levante.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Levante</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="malaga.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/malaga.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Málaga</p>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="elemento2">
-                <a href="realsociedad.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/realsociedad.png">
-                        <p>Real Sociedad</p>
-                    </div>
-                </a>
-            </div>
-            <div class="elemento3">
-                <a href="sevilla.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/sevilla.png">
-                        <p>Sevilla</p>
-                    </div>
-                </a>
-            </div>
-        </div>
 
-        <!-- Fila 7 -->
+            <!-- Fila 6 -->
 
-        <div class="fila">
-            <div class="elemento1">
-                <a href="valencia.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/valencia.png">
-                        <p>Deportivo de La Coruña</p>
-                    </div>
-                </a>
+            <div class="fila">
+                <div class="elemento">
+                    <a href="realmadrid.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/realmadrid.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Real Madrid</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="realsociedad.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/realsociedad.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Real Sociedad</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="sevilla.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/sevilla.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Sevilla</p>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="elemento2">
-                <a href="villarreal.html">
-                    <div class="imagen-elemento">
-                        <img class="escudo-elemento" src="img/villarreal.png">
-                        <p>Villarreal</p>
-                    </div>
-                </a>
+
+            <!-- Fila 7 -->
+
+            <div class="fila">
+                <div class="elemento">
+                    <a href="valencia.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/valencia.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Deportivo de La Coruña</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="elemento">
+                    <a href="villarreal.html">
+                        <div class="imagen-elemento">
+                            <img class="escudo-elemento" src="img/villarreal.png">
+                        </div>
+                        <div class="nombre-elemento">
+                            <p>Villarreal</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-
-<!--PIE DE PAGINA-->
-<div class="footer-container">
-    <p>Copyright &copy; 2018 Ángel Robledillo Perea & Jorge Juan Ñíguez Fernandez
-</div>
+    <!--PIE DE PAGINA-->
+    <div class="footer-container">
+        <p>Copyright &copy; 2018 Ángel Robledillo Perea & Jorge Juan Ñíguez Fernandez
+    </div>
 
 </body>
 </html>
